Quitado título de la gráfica y puesto a la página.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
     </head>
     <body>
+        <h2>Alpha values for monoprotic acid buffer solution</h2>
         <label>K<sub>a</sub>= </label><input type="text" id="constant"/>
         <br/><br/>
         <button type="button" onclick="calculate()">Calculate</button>
@@ -73,7 +74,7 @@ and open the template in the editor.
                         
                     ],
                     {
-                        title: "Alpha Values",
+                        //title: "Alpha Values",
                         grid: {
                             horizontalLines: true,
                             verticalLines: true
